--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,11 @@
 spring.liquibase.change-log=classpath:db/changelog/changelog.sql
 #spring.jpa.hibernate.ddl-auto=create-drop
 
+management.endpoints.health.sensitive=false
+management.health.db.enabled=true
+management.health.defaults.enabled=true
+management.endpoint.health.show-details=always
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=myusername
 spring.datasource.password=mypassword
@@ -11,5 +16,9 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+redis.hostname=localhost
+redis.port=49154
+redis.password=redispw
 
 queue.name=teste
